Revert "Editing, listing and deleting attendance routes"
This reverts commit 8e74e5e0848801835d017dcae01be62825d32de6.
