# src/modules/attendances/dtos/IUpdateAttendanceDTO.ts
@@ -1,5 +1,0 @@
-export default interface IUpdateAttendanceDTO {
-  attendance_id: string;
-  user_id?: string;
-  date?: Date;
-}
