# src/modules/permissions/infra/typeorm/entities/Group.ts
@@ -1,38 +1,0 @@
-import {
-  Entity,
-  Column,
-  PrimaryGeneratedColumn,
-  CreateDateColumn,
-  UpdateDateColumn,
-  ManyToMany,
-  JoinTable,
-} from 'typeorm';
-import Permission from './Permission';
-
-@Entity('groups')
-class Group {
-  @PrimaryGeneratedColumn('uuid')
-  id: string;
-
-  @Column()
-  name: string;
-
-  @Column()
-  description: string;
-
-  @ManyToMany(() => Permission)
-  @JoinTable({
-    name: 'permissions_groups',
-    joinColumns: [{ name: 'group_id' }],
-    inverseJoinColumns: [{ name: 'permission_id' }],
-  })
-  permissions: Permission[];
-
-  @CreateDateColumn()
-  created_at: Date;
-
-  @UpdateDateColumn()
-  updated_at: Date;
-}
-
-export default Group;
