# src/modules/permissions/infra/typeorm/entities/UserGroup.ts
@@ -1,38 +1,0 @@
-import {
-  Entity,
-  Column,
-  PrimaryGeneratedColumn,
-  CreateDateColumn,
-  UpdateDateColumn,
-  ManyToMany,
-  JoinTable,
-} from 'typeorm';
-import Permission from './Permission';
-
-@Entity('groups')
-class UserGroup {
-  @PrimaryGeneratedColumn('uuid')
-  id: string;
-
-  @Column()
-  user_id: string;
-
-  @Column()
-  group_id: string;
-
-  @ManyToMany(() => Permission)
-  @JoinTable({
-    name: 'permissions_groups',
-    joinColumns: [{ name: 'group_id' }],
-    inverseJoinColumns: [{ name: 'permission_id' }],
-  })
-  permissions: Permission[];
-
-  @CreateDateColumn()
-  created_at: Date;
-
-  @UpdateDateColumn()
-  updated_at: Date;
-}
-
-export default UserGroup;
