# src/modules/users/infra/typeorm/entities/User.ts
@@ -1,3 +1,4 @@
+import Attendance from '@modules/attendances/infra/typeorm/entities/Attendance';
 import { Exclude } from 'class-transformer';
 import {
   Entity,
@@ -6,13 +7,7 @@ import {
   CreateDateColumn,
   UpdateDateColumn,
   OneToMany,
-  ManyToMany,
-  JoinTable,
 } from 'typeorm';
-
-import Attendance from '@modules/attendances/infra/typeorm/entities/Attendance';
-import Group from '@modules/permissions/infra/typeorm/entities/Group';
-import Permission from '@modules/permissions/infra/typeorm/entities/Permission';
 
 @Entity('users')
 class User {
@@ -31,22 +26,6 @@ class User {
 
   @OneToMany(() => Attendance, attendances => attendances.user)
   attendances: Attendance[];
-
-  @ManyToMany(() => Group)
-  @JoinTable({
-    name: 'users_groups',
-    joinColumns: [{ name: 'user_id' }],
-    inverseJoinColumns: [{ name: 'group_id' }],
-  })
-  groups: Group[];
-
-  @ManyToMany(() => Permission)
-  @JoinTable({
-    name: 'users_permissions',
-    joinColumns: [{ name: 'user_id' }],
-    inverseJoinColumns: [{ name: 'permission_id' }],
-  })
-  permissions: Permission[];
 
   @CreateDateColumn()
   created_at: Date;
